changes in spelling and alt added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		content="Raj Paints offers premium interior, exterior paints & waterproofing solutions in Pune. Your trusted dealer for Asian Paints, Berger, Dulux, & Dr. Fixit. Get expert consultation & competitive pricing." />
 	<meta property="og:title" content="Pune's Top Paint Dealers & Suppliers : Raj Paints">
 	<meta property="og:description"
-		content="Transform your space with Raj Paints – leading suppliers of high-quality paints, offering expert services, competitive pricing, and top brands like Asian Paints, Berger, and Dulux in Pune.">
+		content="Transform your space with Raj Paints - leading suppliers of high-quality paints, offering expert services, competitive pricing, and top brands like Asian Paints, Berger, and Dulux in Pune.">
 
 	<!-- fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -288,17 +288,17 @@
 							<div class="welcome-one__img-box wow slideInLeft" data-wow-delay="100ms"
 								data-wow-duration="2500ms">
 								<div class="welcome-one__img-1">
-									<img src="assets/images/op-abt/rp-abt-1.png" alt="Waterproofing">
+									<img src="assets/images/op-abt/rp-abt-1.png" alt="Waterproofing solutions in pune">
 								</div>
 								<div class="welcome-one__img-2">
-									<img src="assets/images/op-abt/rp-abt-2.png" alt="Painting">
+									<img src="assets/images/op-abt/rp-abt-2.png" alt="Painting services in pune">
 								</div>
 								<div class="welcome-one__experience">
 									<div class="welcome-one__experience-shape"
 										style="background-image: url(assets/images/shapes/welcome-one-experience-shape.png);">
 									</div>
 									<div class="welcome-one__experience-year">
-										<h3>30+</h3>
+										<h3>12+</h3>
 									</div>
 									<p class="welcome-one__experience-text">Years <br> Experience</p>
 								</div>
@@ -465,7 +465,7 @@
 						<div class="benefits-one__left">
 							<div class="section-title text-left">
 								<span class="section-title__tagline">Excellence in Every Drop</span>
-								<h2 class="section-title__title">Find the Perfect Paint for Your Space</h2>
+								<h4 class="section-title__title">Find the Perfect Paint for Your Space</h4>
 								<div class="section-title__line"></div>
 							</div>
 							<p class="benefits-one__text">At <b>Raj Paints</b>, we offer a vibrant collection of premium
@@ -487,7 +487,7 @@
 														<i class="fa fa-check"></i>
 													</div>
 													<div class="text">
-														<p>Best Paint</p>
+														<p>Best Paint Services</p>
 													</div>
 												</li>
 											</ul>
@@ -504,7 +504,7 @@
 														<i class="fa fa-check"></i>
 													</div>
 													<div class="text">
-														<p>Best Work</p>
+														<p>Outstanding Quality</p>
 													</div>
 												</li>
 											</ul>
@@ -584,7 +584,7 @@
 			<div class="container">
 				<div class="section-title text-center">
 					<span class="section-title__tagline">Our Services</span>
-					<h2 class="section-title__title">Services We’re Offering</h2>
+					<h4 class="section-title__title">Services We’re Offering</h4>
 					<div class="section-title__line"></div>
 				</div>
 				<div class="row">
@@ -592,7 +592,7 @@
 						<!--Services Two single-->
 						<div class="services-two__single">
 							<div class="services-two__img">
-								<img src="assets/images/op-services/interior.png" alt="Interior">
+								<img src="assets/images/op-services/interior.png" alt="Interior painting services in pune">
 							</div>
 							<div class="services-two__content">
 								<div class="services-two__icon">
@@ -611,7 +611,7 @@
 						<!--Services Two single-->
 						<div class="services-two__single">
 							<div class="services-two__img">
-								<img src="assets/images/op-services/exterior-3.png" alt="Exterior">
+								<img src="assets/images/op-services/exterior-3.png" alt="Exterior services in pune">
 							</div>
 							<div class="services-two__content">
 								<div class="services-two__icon">
@@ -630,7 +630,7 @@
 						<!--Services Two single-->
 						<div class="services-two__single">
 							<div class="services-two__img">
-								<img src="assets/images/op-services/waterproofing.png" alt="Waterproofing">
+								<img src="assets/images/op-services/waterproofing.png" alt="Waterproofing services in pune">
 							</div>
 							<div class="services-two__content">
 								<div class="services-two__icon">
@@ -759,7 +759,7 @@
 									</div>
 								</a>
 							</div> -->
-							<h3 class="leading__title">Leadeing Paint<br>Suppliers in Pune</h3>
+							<h2 class="leading__title">Leading Paint<br>Suppliers in Pune</h2>
 						</div>
 					</div>
 					<div class="col-xl-5 col-lg-6">
@@ -956,34 +956,34 @@
                                     }
                                     }'>
 									<div class="item">
-										<img src="assets/images/brand/asian-paints-logo.png" alt="Brand">
+										<img src="assets/images/brand/asian-paints-logo.png" alt="asian paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/dulux.png" alt="Brand">
+										<img src="assets/images/brand/dulux.png" alt="dulux paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/berger-paints-logo.png" alt="Brand">
+										<img src="assets/images/brand/berger-paints-logo.png" alt="berger paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/drfixit-logo.png" alt="Brand">
+										<img src="assets/images/brand/drfixit-logo.png" alt="dr fixit in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/mrf-logo-1.png.png" alt="Brand">
+										<img src="assets/images/brand/mrf-logo-1.png.png" alt="mrf paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/birla-opus-logo-v1.png" alt="Brand">
+										<img src="assets/images/brand/birla-opus-logo-v1.png" alt="birla opus paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/indigo-paints-logo-1.png" alt="Brand">
+										<img src="assets/images/brand/indigo-paints-logo-1.png" alt="indigo paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/asian-paints-logo.png" alt="Brand">
+										<img src="assets/images/brand/asian-paints-logo.png" alt="asain paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/dulux.png" alt="Brand">
+										<img src="assets/images/brand/dulux.png" alt="dulux paints in pune">
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/brand/berger-paints-logo.png" alt="Brand">
+										<img src="assets/images/brand/berger-paints-logo.png" alt="berger paints in pune">
 									</div><!-- /.item -->
 								</div>
 							</div>
@@ -1165,7 +1165,7 @@
 										</div>
 										<div class="text">
 											<h5>Call anytime</h5>
-											<p><a href="tel:918552079312">+918552079312</a></p>
+											<p><a href="tel:917020873119">+917020873119</a></p>
 										</div>
 									</li>
 									<li>
